# online_ping_pong

./: CMakeLists.txt  README.md  main.cpp  network.cpp  network.h  player.h
client/: player.cpp
client/sfml/: input.cpp  window.h
server/: CMakeLists.txt  main.cpp  network.cpp  network.h
sfml/: ball.cpp  ball.h  input.h  window.cpp
